퀴즈 목록 불러오기 API 검색어 적용
- 퀴즈 목록 불러오기 API 검색어 적용

--- a/app/styles/quizCard.module.scss
+++ b/app/styles/quizCard.module.scss
@@ -40,6 +40,7 @@
     height: 65%;
     overflow: hidden;
     .thumbnail_img {
+      width: 100%;
       height: 100%;
       background-color: v.$main-deep-gray;
       object-fit: contain;
