메인 페이지 퀴즈 목록 무한 스크롤 구현 외
- 메인 페이지 퀴즈 목록 무한 스크롤 구현
- 퀴즈 목록 불러오기 API 필터 및 검색어 기능 연동
- 퀴즈 검색 결과 없을 경우 알림 이미지 출력 기능 구현

--- a/app/styles/main.module.scss
+++ b/app/styles/main.module.scss
@@ -72,6 +72,18 @@
       display: flex;
       justify-content: flex-start;
       flex-wrap: wrap;
+
+      .noneQuiz {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+
+        .noneQuiz_img {
+          display: flex;
+          width: 100%;
+        }
+      }
     }
   }
 
